# exasolchat

./: .env.example  README.md  app.py  core.py  llm.py  pyproject.toml  schema.py  test_core.py  test_safety.py
.github/workflows/: publish.yml
src/exachat/: __init__.py  app.py  app_builder.py  charts.py  cli.py  connection.py  core.py  kb.py  llm.py  rag.py  safety.py  schema.py
src/exachat/knowledge_base/: aggegations_patterns.json  aggregations.json  bi_correctness.json  cte_recursion.json  exists.json  grain_mistakes.json  joins.json  performance.json  pipeline_structure.json  safe_divisions.json  segmentation_classification_patterns.json  semi_structured_data.json  subqueries.json  time_series.json  time_series_temporal_patterns.json  time_window_filtering.json  window_function.json  window_functions.json
src/exasolchat/: app.py  rag.py
src/talonsight/: __init__.py  agent.py  app.py  app_builder.py  builder.py  capabilities.py  charts.py  cli.py  connection.py  core.py  dq.py  dq_config.json  graph.py  hermes_bootstrap.py  kb.py  llm.py  mcp_server.py  memory.py  metrics.py  onboarding.py  preferences.py  profiler.py  rag.py  safety.py  schema.py  setup_wizard.py
src/talonsight/knowledge_base/: campaign_performance.json  canonical_problems.json  cte_pattern_query_architecture.json  data_quality_correctness_patterns.json  duckdb_patterns.json  joins_relational_patterns.json  profit_loss.json  segmentation.json  statistical_analysis.json  statistical_analytics_patterns.json  supply_chain.json  transformations.json  voucher_discount.json
tests/: test_core.py  test_safety.py
tombstone/: LICENSE  README.md  pyproject.toml
tombstone/src/exachat/: __init__.py
