[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "exachat"
version = "0.4.1"
description = "Ask your database anything — safe text-to-SQL with local LLMs, RAG memory, and interactive charts."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
authors = [{name = "exachat contributors"}]
keywords = ["sql", "duckdb", "exasol", "llm", "text-to-sql", "streamlit", "ollama", "rag", "local-llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "duckdb>=0.10",
    "sqlalchemy>=2.0",
    "streamlit>=1.30",
    "plotly>=5.18",
    "altair>=5.2",
    "pandas>=2.0",
    "httpx>=0.25",
    "chromadb>=0.4",
    "python-dotenv>=1.0",
    # In-process semantic embeddings via ONNX — no server required.
    # nomic-embed-text model (~130 MB) is downloaded once on first connect and cached locally.
    "fastembed>=0.3",
]

[project.optional-dependencies]
exasol     = ["pyexasol>=0.25", "sqlalchemy-exasol>=5.0"]
postgres   = ["psycopg2-binary>=2.9"]
mysql      = ["pymysql>=1.1"]
# kept for backwards-compat; fastembed is now a base dependency
embeddings = ["fastembed>=0.3"]
# mlx-lm only installs on Apple Silicon (arm64 macOS); skipped silently elsewhere
mlx        = ["mlx-lm>=0.22; sys_platform=='darwin' and platform_machine=='arm64'"]
all        = [
    "pyexasol>=0.25", "sqlalchemy-exasol>=5.0",
    "psycopg2-binary>=2.9",
    "pymysql>=1.1",
    "fastembed>=0.3",
    "mlx-lm>=0.22; sys_platform=='darwin' and platform_machine=='arm64'",
]
dev        = ["pytest>=7.0", "ruff>=0.1"]

[project.scripts]
exachat = "exachat.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
exachat = ["knowledge_base/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"
