[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "exachat"
version = "0.5.0"
description = "RENAMED — this package has moved to talonsight. pip install talonsight"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
authors = [{name = "talonsight contributors"}]
keywords = ["sql", "duckdb", "llm", "text-to-sql", "talonsight"]

dependencies = [
    "talonsight>=0.5.0",
]

[tool.setuptools.packages.find]
where = ["src"]
